WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104780
Web Inspector: Crash in InspectorDOMAgent::pushNodePathToFrontend when inspecting document with CSS generated content
https://bugs.webkit.org/show_bug.cgi?id=104780
Summary
Web Inspector: Crash in InspectorDOMAgent::pushNodePathToFrontend when inspec...
Antoine Quint
Reported
2012-12-12 01:46:25 PST
When using the LayerTreeAgent to inspect the layer tree of a page containing CSS generated content, we hit the first ASSERT in InspectorDOMAgent::pushNodePathToFrontend due to the node being 0 as passed from InspectorDOMAgent::pushNodePathForRenderLayerToFrontend. Indeed, that method naively expects all RenderLayers to be associated with a Node, except there may be layers generated by CSS generated content. We should make that method more robust so that it checks for an associated Node for the provided RenderLayer and returns 0 in case there is no such node before calling into InspectorDOMAgent::pushNodePathToFrontend.
Attachments
Patch
(7.89 KB, patch)
2012-12-12 02:00 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-12-12 01:46:44 PST
<
rdar://problem/12862981
>
Antoine Quint
Comment 2
2012-12-12 02:00:21 PST
Created
attachment 179004
[details]
Patch
WebKit Review Bot
Comment 3
2012-12-12 07:55:21 PST
Comment on
attachment 179004
[details]
Patch Clearing flags on attachment: 179004 Committed
r137466
: <
http://trac.webkit.org/changeset/137466
>
WebKit Review Bot
Comment 4
2012-12-12 07:55:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug